Bug 393302 - Not saved layer-mask animation
Summary: Not saved layer-mask animation
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Usability (other bugs)
Version First Reported In: 4.0.1
Platform: Microsoft Windows Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: Dmitry Kazakov
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-04-19 16:15 UTC by Grinya Lesnoy
Modified: 2018-05-08 11:29 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
If my description turned out incomprehensible =) (36.59 KB, image/png)
2018-04-19 16:15 UTC, Grinya Lesnoy
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Grinya Lesnoy 2018-04-19 16:15:06 UTC
Created attachment 112120 [details]
If my description turned out incomprehensible =)

Hello!
If you create an animation in the mask layer, save the kra-file and reopen it, it will open without animation in the mask layer (only the first frame will remain)
If you open the file with the animation in the mask, saved in the old version of the program (for example, 3.3), then the animation will open in it, but if it is later saved, it will also disappear
Comment 1 Halla Rempt 2018-04-28 09:31:34 UTC
Hi Grinya,

I can confirm the bug.

Dmitry, can you take a look? I suspect some aspect of the transparency mask isn't cloned correctly.
Comment 2 Ofteeking 2018-05-02 22:06:24 UTC
I also can confirm the bug.

Just ran into the same issue on Ubuntu 16.4 with Latest Krita Nightly Build #78 (https://binary-factory.kde.org/job/Krita_Nightly_Appimage_Build/78/)
Comment 3 Dmitry Kazakov 2018-05-04 11:39:06 UTC
Git commit 3119ea6932c5f9d866b556666c27545c6d643fec by Dmitry Kazakov.
Committed on 04/05/2018 at 11:38.
Pushed by dkazakov into branch 'master'.

Fix saving animated transparency and filter masks, adjustment layer

In copy-ctor of the node we should also copy all the content channels
this node supports.

M  +1    -1    libs/image/kis_base_node.h
M  +6    -0    libs/image/kis_mask.cc
M  +4    -4    libs/image/kis_paint_device.cc
M  +10   -3    libs/image/kis_paint_device.h
M  +1    -1    libs/image/kis_paint_layer.cc
M  +2    -2    libs/image/kis_pixel_selection.cpp
M  +1    -1    libs/image/kis_pixel_selection.h
M  +1    -1    libs/image/kis_selection.cc
M  +11   -2    libs/image/kis_selection_based_layer.cpp
M  +1    -1    libs/image/tests/kis_keyframing_test.cpp
M  +1    -1    libs/image/tests/kis_paint_device_test.cpp
M  +3    -0    plugins/dockers/animation/timeline_frames_view.cpp
M  +2    -2    plugins/extensions/waveletdecompose/waveletdecompose.cpp

https://commits.kde.org/krita/3119ea6932c5f9d866b556666c27545c6d643fec
Comment 4 Halla Rempt 2018-05-04 14:01:09 UTC
Git commit 021558f747ad279137f4827b748166e58b5ad20d by Boudewijn Rempt, on behalf of Dmitry Kazakov.
Committed on 04/05/2018 at 12:55.
Pushed by rempt into branch 'krita/4.0'.

Fix saving animated transparency and filter masks, adjustment layer

In copy-ctor of the node we should also copy all the content channels
this node supports.
(cherry picked from commit 3119ea6932c5f9d866b556666c27545c6d643fec)

M  +1    -1    libs/image/kis_base_node.h
M  +6    -0    libs/image/kis_mask.cc
M  +4    -4    libs/image/kis_paint_device.cc
M  +10   -3    libs/image/kis_paint_device.h
M  +1    -1    libs/image/kis_paint_layer.cc
M  +2    -2    libs/image/kis_pixel_selection.cpp
M  +1    -1    libs/image/kis_pixel_selection.h
M  +1    -1    libs/image/kis_selection.cc
M  +11   -2    libs/image/kis_selection_based_layer.cpp
M  +1    -1    libs/image/tests/kis_keyframing_test.cpp
M  +1    -1    libs/image/tests/kis_paint_device_test.cpp
M  +2    -2    plugins/extensions/waveletdecompose/waveletdecompose.cpp

https://commits.kde.org/krita/021558f747ad279137f4827b748166e58b5ad20d