Fix saving animated transparency and filter masks, adjustment layer

In copy-ctor of the node we should also copy all the content channels
this node supports.

BUG:393302
(cherry picked from commit 3119ea6932c5f9d866b556666c27545c6d643fec)